adding skip to the loo

--- a/index.html
+++ b/index.html
@@ -80,6 +80,27 @@
                                     </div>
                                 </div>
 
+                                <div class="wow fadeInUp col-xl-4 col-lg-6 mb-4">
+                                    <div class="card-top-radius miniCard " style="transform: rotate(0)">
+                                        <div class=" p-4">
+                                            <h3 class="card-title ">Skip to the Loo</h3>
+                                            <h6 class="card-subtitle ">Full Stack Google Maps App</h6>
+                                        </div>
+                                        <a href="https://skip-to-the-loo.herokuapp.com/" class="stretched-link">
+                                            <div class="card-img-container d-flex justify-content-center ">
+                                                <img src="Assets/Images/SkipToTheLoo.png" class="portfolio-card card-img-top"
+                                                    alt="screenshot">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="card-body miniCard card-bottom-radius"
+                                        style="transform: rotate(0)"><a
+                                            href="https://github.com/alexastef/loo"
+                                            class=" stretched-link"><i
+                                                class="fab fa-github-square fa-3x align-middle"></i> View on Github</a>
+                                    </div>
+                                </div>
+
                                 <div class="wow fadeInUp delay-250ms col-xl-4 col-lg-6 mb-4">
                                     <div class="card-top-radius miniCard" style="transform: rotate(0)">
                                         <div class=" p-4">
