--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
                                         <div class="mt-3 ">
                                             <ul class="nav">
                                                 <li class="wow fadeInUp slideInRight nav-item">
-                                                    <a href="./Assets/Files/Resume.web.pdf" class="nav-link"><i
+                                                    <a href="./Assets/Files/Resume.pdf" class="nav-link"><i
                                                             class="fas fa-file "></i> View my
                                                         resume</a>
                                                 </li>
