--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="col-xl-12">
                         <div class="container">
                             <div class="row">
-                                <div class="col-md-6 cardCol">
+                                <div class="col-md-12 col-lg-6 cardCol">
                                     <div class="card card-radius miniCard wow fadeInUp">
                                         <div class="card-body">
                                             <h3 class="card-title">Covid - Can I do it?</h3>
@@ -89,7 +89,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 cardCol">
+                                <div class="col-md-12 col-lg-6 cardCol">
                                     <div class="card card-radius miniCard wow fadeInUp ">
                                         <div class="card-body">
                                             <h3 class="card-title">Skip to the Loo</h3>
@@ -125,7 +125,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 cardCol">
+                                <div class="col-md-12 col-lg-6 cardCol">
                                     <div class="card card-radius miniCard wow fadeInUp ">
                                         <div class="card-body">
                                             <h3 class="card-title">Purple Pages</h3>
@@ -158,7 +158,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 cardCol">
+                                <div class="col-md-12 col-lg-6 cardCol">
                                     <div class="card card-radius miniCard wow fadeInUp ">
                                         <div class="card-body">
                                             <h3 class="card-title">Weather Dashboard</h3>
@@ -192,7 +192,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 cardCol">
+                                <div class="col-md-12 col-lg-6 cardCol">
                                     <div class="card card-radius miniCard wow fadeInUp ">
                                         <div class="card-body">
                                             <h3 class="card-title">Work Day Scheduler</h3>
@@ -225,7 +225,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 cardCol">
+                                <div class="col-md-12 col-lg-6 cardCol">
                                     <div class="card card-radius miniCard wow fadeInUp ">
                                         <div class="card-body">
                                             <h3 class="card-title">Employee Tracker</h3>
@@ -258,7 +258,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 cardCol">
+                                <div class="col-md-12 col-lg-6 cardCol">
                                     <div class="card card-radius miniCard wow fadeInUp ">
                                         <div class="card-body">
                                             <h3 class="card-title">Burger</h3>
