switch to logo instead of screenshot

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                             <div class="portfolio-img-container">
                                                 <a href="https://skip-to-the-loo.herokuapp.com/">
                                                 <img class="card-img-bottom portfolio-card" 
-                                                src="Assets/Images/SkipToTheLoo.png"
+                                                src="Assets/Images/loo.png"
                                                 alt="screenshot" />
                                                 </a>
                                             </div>
