--- a/about.html
+++ b/about.html
@@ -28,12 +28,13 @@
 <body class="codingBackground">
     <header class="pageBar">
         <div class="d-flex justify-content-center">
-            <h1 class="py-1 prettyFont">Johnny Li</h1>
+            <h1 class="py-1 prettyFont">Johnny Li <small class="text-muted">Full Stack Developer</small></h1>
         </div>
     </header>
     <nav class="pageBar font-weight-bold nav justify-content-center">
         <a class="nav-link prettyFont" href="about.html">About Me</a>
         <a class="nav-link prettyFont" href="index.html">Portfolio</a>
+        <a class="nav-link prettyFont" href="contact.html">Contact</a>
     </nav>
     <main class="container">
         <article class="card mt-4 mainCard">
