--- a/contact.html
+++ b/contact.html
@@ -4,41 +4,41 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <title>Contact</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
         integrity="" crossorigin="anonymous" />
 </head>
 
-<body class="bg-dark">
-    <header>
+<body class="codingBackground">
+    <header class="pageBar">
         <div class="d-flex justify-content-center">
-            <h1 class="bg-dark text-light">Johnny Li</h1>
+            <h1 class="py-1 prettyFont">Johnny Li <small class="text-muted">Full Stack Developer</small></h1>
         </div>
     </header>
-    <nav class="nav navbar-light bg-light justify-content-center">
-        <a class="nav-link text-dark" href="index.html">About Me</a>
-        <a class="nav-link text-dark" href="portfolio.html">Portfolio</a>
-        <a class="nav-link text-dark" href="contact.html">Contact</a>
+    <nav class="pageBar nav navbar-light justify-content-center">
+        <a class="nav-link prettyFont" href="about.html">About Me</a>
+        <a class="nav-link prettyFont" href="index.html">Portfolio</a>
+        <a class="nav-link prettyFont" href="contact.html">Contact</a>
     </nav>
     <main class="container">
-        <article class="card mt-4">
+        <article class="card mt-4 contactCard">
             <div class="card-body">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="text-dark card-title">Contact</h2>
+                        <h2 class="card-title">Contact</h2>
                         <hr>
                     </div>
                 </div>
-                <form>
+                <form id="contactForm">
                     <div class="row form-group">
                         <div class="col-lg-12">
                             <label for="inName">Name</label>
@@ -69,32 +69,33 @@
             </div>
         </article>
     </main>
-    <footer class="fixed-bottom page-footer bg-light text-dark font-small ">
+    <footer class="pageBar fixed-bottom page-footer font-small ">
         <div class="d-flex justify-content-center">
             <h3 class="mt-3">
                 <a class="mr-3" href="https://github.com/reptile18">
-                    <i class="fab fa-github-square text-dark"></i>
+                    <i class="fab fa-github-square"></i>
                 </a>
 
                 <a class="mr-3" href="https://www.linkedin.com/in/johnny-li-031b949/">
-                    <i class="fab fa-linkedin text-dark"></i>
+                    <i class="fab fa-linkedin"></i>
                 </a>
 
                 <a class="mr-3" href="https://www.facebook.com/johnny.li.144">
-                    <i class="fab fa-facebook-square text-dark"></i>
+                    <i class="fab fa-facebook-square"></i>
                 </a>
 
                 <a class="mr-3" href="https://twitter.com/hotreptile18">
-                    <i class="fab fa-twitter-square text-dark"></i>
+                    <i class="fab fa-twitter-square"></i>
                 </a>
 
                 <a class="mr-3" href="https://www.instagram.com/johnnyli8004/">
-                    <i class="fab fa-instagram-square text-dark"></i>
+                    <i class="fab fa-instagram-square"></i>
                 </a>
             </h3>
         </div>
         <div class="footer-copyright text-center py-3">© Copyright</div>
     </footer>
+    <script src="contact.js"></script>
 </body>
 
 </html>
