--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
 <body class="bg-dark codingBackground">
     <header class="pageBar">
         <div class="d-flex justify-content-center">
-            <h1 class="py-1 prettyFont">Johnny Li</h1>
+            <h1 class="py-1 prettyFont">Johnny Li <small class="text-muted">Full Stack Developer</small></h1>
         </div>
     </header>
     <nav class="nav pageBar font-weight-bold justify-content-center">
         <a class="nav-link prettyFont" href="about.html">About Me</a>
         <a class="nav-link prettyFont" href="index.html">Portfolio</a>
+        <a class="nav-link prettyFont" href="contact.html">Contact</a>
     </nav>
     <main class="container">
         <article class="card mt-4 mainCard">
