fix nav font on contact page

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <h1 class="py-1 prettyFont">Johnny Li <small class="text-muted">Full Stack Developer</small></h1>
         </div>
     </header>
-    <nav class="pageBar nav navbar-light justify-content-center">
+    <nav class="pageBar font-weight-bold nav justify-content-center">
         <a class="nav-link prettyFont" href="about.html">About Me</a>
         <a class="nav-link prettyFont" href="index.html">Portfolio</a>
         <a class="nav-link prettyFont" href="contact.html">Contact</a>
