add employee directory project

--- a/index.html
+++ b/index.html
@@ -129,6 +129,39 @@
                                 <div class="col-md-12 col-lg-6 cardCol">
                                     <div class="card card-radius miniCard wow fadeInUp ">
                                         <div class="card-body">
+                                            <h3 class="card-title">Employee Directory</h3>
+                                            <h5 class="card-subtitle">Employee directory app</h6>
+                                            <p class="card-project-description">React application for viewing, sorting, and filtering employees.
+                                            </p>
+                                            <div class="portfolio-img-container">
+                                                <a href="https://safe-journey-04548.herokuapp.com/">
+                                                    <img class="card-img-bottom portfolio-card" 
+                                                    src="Assets/Images/employeedirectory.png"
+                                                    alt="screenshot" />
+                                                </a>
+                                            </div>
+                                            <div class="divTechs mt-3">Technologies: 
+                                                <span class="badge badge-pill techBadge">React</span>
+                                                <span class="badge badge-pill techBadge">React Class Component</span>
+                                                <span class="badge badge-pill techBadge">React Functional Component</span>
+                                                <span class="badge badge-pill techBadge">Axios</span>
+                                                <span class="badge badge-pill techBadge">Bootstrap</span>
+                                            </div>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a
+                                                href="https://github.com/reptile18/employee-directory"
+                                                class="">
+                                                <i class="fab fa-github-square fa-3x align-middle"></i>
+                                                View on Github
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-12 col-lg-6 cardCol">
+                                    <div class="card card-radius miniCard wow fadeInUp ">
+                                        <div class="card-body">
                                             <h3 class="card-title">Purple Pages</h3>
                                             <h5 class="card-subtitle">Web Entertainment Search App</h6>
                                             <p class="card-project-description">Client application using third party APIs to display streaming
