add react hooks to employee directory

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                                             </div>
                                             <div class="divTechs mt-3">Technologies: 
                                                 <span class="badge badge-pill techBadge">React</span>
+                                                <span class="badge badge-pill techBadge">React Hooks</span>
                                                 <span class="badge badge-pill techBadge">React Class Component</span>
                                                 <span class="badge badge-pill techBadge">React Functional Component</span>
                                                 <span class="badge badge-pill techBadge">Axios</span>
