--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                                             <div class="divTechs mt-3">Technologies: 
                                                 <span class="badge badge-pill techBadge">React</span>
                                                 <span class="badge badge-pill techBadge">React Hooks</span>
-                                                <span class="badge badge-pill techBadge">React Class Component</span>
-                                                <span class="badge badge-pill techBadge">React Functional Component</span>
+                                                <span class="badge badge-pill techBadge">Class Component</span>
+                                                <span class="badge badge-pill techBadge">Functional Component</span>
                                                 <span class="badge badge-pill techBadge">Axios</span>
                                                 <span class="badge badge-pill techBadge">Bootstrap</span>
                                             </div>
